# fake-clock

./: .gitignore  .travis.yml  CHANGELOG.md  Cargo.toml  README.md  appveyor.yml
.github/workflows/: pr.yml
scripts/: clippy  tests
src/: lib.rs
