[package]
authors = ["MaidSafe Developers <dev@maidsafe.net>"]
description = "Fake clock for deterministic testing of code depending on time."
documentation = "https://docs.rs/fake_clock"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "fake_clock"
readme = "README.md"
repository = "https://github.com/maidsafe/fake_clock"
version = "0.3.0"
edition = "2018"

[dependencies]
