dependencies = { }

[package]
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
description = "Fake clock for deterministic testing of code depending on time."
documentation = "https://docs.rs/sn_fake_clock"
homepage = "https://maidsafe.net"
license = "MIT OR BSD-3-Clause"
name = "sn_fake_clock"
readme = "README.md"
repository = "https://github.com/maidsafe/sn_fake_clock"
version = "0.4.6"
edition = "2018"
